# gdmty-django-users

./: LICENSE  README.es.md  README.md  pyproject.toml  requirements.txt
src/gdmty-django-users/: admin.py  apps.py  decorators.py  models.py  permissions.py  serializers.py  settings.py  tests.py  views.py  viewsets.py
src/gdmty_django_users/: __init__.py  admin.py  apps.py  decorators.py  managers.py  models.py  permissions.py  serializers.py  settings.py  tests.py  urls.py  viewsets.py  wagtail_forms.py
src/gdmty_django_users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions_and_more.py  0003_alter_user_groups.py  0003_alter_user_groups_alter_user_user_permissions.py
